--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,10 @@
+/*  ---------------------------
+    Let's start with the basics
+    -------------------------*/
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { 
+    display: block;
+}
+
 html,
 body {
     font-family: 'Lato', Helvetica, sans-serif;
@@ -5,34 +12,17 @@ body {
     color: #FABEA0;
 }
 
-.lee-header {
-    border: 10px solid #6D7D64;
-    background-color: #A6B890;
-    padding: 50px;
-    margin-top: 50px;
-    margin-right: 0px;
-}
-
-.lee-header > h1 {
-    font-family: 'Josefin Slab', Arial, serif;
-    font-weight: 700;
-    color: #402F3F;
-    text-transform: uppercase;
-    font-size: 100px;
-    line-height: 80%;
+.text-center {
     text-align: center;
-    display: inline-block;
-    margin-right: 30px;
 }
 
-.sidebar-icons {
-    font-size: 50px;
-    list-style-type: none;
-    padding: 0px;
-    width: 5px;
-    margin-top: 60px;
-    margin-left: 0px;
-    margin-right: 0px;
+.container {
+    width: 768px;
+    margin: 2.5em auto;
+}
+
+.row {
+    margin: auto;
 }
 
 a {
@@ -51,16 +41,50 @@ a:active {
     color: #E08582;
 }
 
+/*  -----------------------------------------
+    The building blocks- super clever, right?
+    ---------------------------------------*/
+.lee-header {
+    border: 0.7em solid #6D7D64;
+    background-color: #A6B890;
+    padding: 1em;
+    width: 100%;
+}
+
+.lee-header > span {
+    font-family: 'Josefin Slab', Arial, serif;
+    font-weight: 700;
+    font-size: 5em;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 0.8em;
+    color: #402F3F;
+    display: inline-block;
+    padding: 0.2em;
+}
+
+
+.sidebar-icons {
+    display: inline-block;
+    /*float: right;*/
+    font-size: 35px;
+    list-style-type: none;
+    line-height: 0.2em;
+    padding: 0.5em;
+    margin: 0;
+}
+
+/*.sidebar-icon-alt {*/
+/*    display: none;*/
+/*}*/
 
 .lee-thumb {
     display: inline-block;
-    vertical-align: top;
-    margin-top: 15px;
-    width: 20%;
-}
-
-.lee-header-icon-alt {
-    display: none;
+    border-radius: 100px;
+    vertical-align:  center;
+    max-width: 16%;
+    height: auto;
+	width: auto\9; /* ie8 */
 }
 
 .lee-header-subtext {
@@ -70,22 +94,23 @@ a:active {
 .lee-header-coming-soon {
     margin-top: 75px;
     font-size: 30px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .lee-header-coming-soon > #cta-links {
     background-color: #FFBC41;
+    width: 100%;
     padding: 20px;
     margin-bottom: 75px;
     color: #333;
     box-shadow: 2px 2px 3px rgba(0,0,0,0.3);
 }
 
-.text-shadow {
-    text-shadow: 2px 1px 0px rgba(0,0,0,0.5);
-}
 
-
-
+/*  ---------------------------------------------------------------
+    Query all the medias. Make my portfolio look sorta professional.
+    -------------------------------------------------------------*/
 @media screen and (max-width: 1200px) {
     .sidebar-icons {
         display: none
@@ -100,13 +125,13 @@ a:active {
         padding: 20px;
     }
     
-    .lee-header > h1 {
+    .lee-header > span {
         font-size: 70px;
         line-height: 80%;
     }
     
-    .lee-header-icon-alt {
-        display: inline;
+    .sidebar-icons {
+        display: inline-block;
         font-size: 35px;
     }
     
@@ -121,7 +146,7 @@ a:active {
 }
 
 @media screen and (max-width: 700px) {
-    .lee-header > h1 {
+    .lee-header > span {
         font-size: 40px;
         line-height: 80%;
     }
@@ -134,36 +159,33 @@ a:active {
         padding: 20px;
     }
     
-    .lee-header-icon-alt {
+    .sidebar-icons {
         font-size: 25px;
     }
 }
  
 @media screen and (max-width: 570px) {
-    .lee-header > h1 {
+    .lee-header > span {
         font-size: 35px;
         line-height: 80%;
     }
         
-   .lee-header-icon-alt {
+   .sidebar-icons {
         font-size: 20px;
     }
 }
 
 @media screen and (max-width: 320px) {
-    .lee-header > h1 {
+    .lee-header > span {
         font-size: 25px;
         line-height: 80%;
     }
-    
     
     .lee-header {
         padding: 5px;
     }
         
-   .lee-header-icon-alt {
+   .sidebar-icons {
         font-size: 20px;
     }
 }
-
-
